[package]
name = "fli"
description = "The commander.js like Cli Parser for rust"
version = "0.0.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/codad5/fli"
repository = "https://github.com/codad5/fli"
documentation = "https://docs.rs/fli"
readme = "README.md"
authors = ["Chibueze Aniezeofor (codad5) <aniezeoformic@gmail.com>"]
categories = ["cli", "cli-parser", "parser", "rust", "javascript", "cli-library", "development-tools::cargo-plugins"]
keywords = ["cli", "cli-parser", "parser", "commander.js" , "clap", "javascript", "cli-library", "fli", "command-line", "command-line-tool"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
