[package]
name = "fli"
description = "The commander.js like CLI Parser for rust"
version = "0.0.7"
edition = "2021"
license = "MIT"
homepage = "https://github.com/codad5/fli"
repository = "https://github.com/codad5/fli"
documentation = "https://docs.rs/fli"
readme = "README.md"
authors = ["Chibueze Aniezeofor (codad5) <aniezeoformic@gmail.com>"]
categories = [
    "command-line-utilities",
    "parsing",
    "development-tools::cargo-plugins",
    "text-processing",
    "utilities"
]
keywords = ["cli", "cli-parser", "parser", "clap", "fli"]

[dependencies]
colored = "2.0.4"
